RefreshUI/Library UI/Refresh Library/Library Code.css
		/* List Library */
	/*Main Style*/
/*Remove Color*/
._3x1HklzyDs4TEjACrRO2tB {
    background-image: unset;
}
._2TKEazUUS3TlniZfpc8OOe {
    background-color: unset;
}
/*Bigger Text*/
._2-O4ZG0KrnSrzISHBKctFQ {
    font-size: 14px;
}
/*Bigger List*/
div.ReactVirtualized__Grid__innerScrollContainer > div.Panel {
	height: 28px !important;
}
._2-O4ZG0KrnSrzISHBKctFQ ._1vO6BoiVslZgs1kqDGdUs8 {
	padding-bottom: 4px;
    padding-top: 4px;
	padding-left: 23px;
}
/* Remove Scroll */
.ReactVirtualized__Grid.ReactVirtualized__List {
    scrollbar-width: none !important;
}
/* Fancy Game List */
._9sPoVBFyE_vE87mnZJ5aB {
    padding: 8px;
    margin-top: -8px;
    padding-bottom: 14.6px;
	position: unset;
}
._3x1HklzyDs4TEjACrRO2tB {
    padding: 4px;
	border-radius: 10px;
    background: var(--secondary-background) !important;
}
html:has([class*="NarrowRightPanel"]) [class*="_9sPoVBFyE_vE87mnZJ5aB"] {
    height: 97.9% !important;
}

._3pSPluBgf0NeR1kkCLWMhR {
    background-color: var(--main-background);
}
._3pSPluBgf0NeR1kkCLWMhR.eNLOx4LVceeMwRvTVWh3 {
    background-color: color-mix(in srgb, var(--main-background) 90%, white) !important;
}
._3pSPluBgf0NeR1kkCLWMhR:hover {
    background-color: color-mix(in srgb, var(--main-background) 90%, white) !important;
}

		/* Main Game Page */
/*"Window" Style*/
._2Dd4T78PcCTUVgOtDGFY5j {
    width: 99.4%;
    height: 99.2%;
    background: var(--main-background);
    border-radius: 10px;
}
._2Nq6ov7A1hGcHXVOXNt_OE {
    border-top: unset;
}

._3vCzSrrXZzZjVJFZNg9SGu>* {
    background-color: var(--main-background);
    border-radius: 6px;
}
._2l416KfEtI4CL0mCUEmOBw {
    background-color: unset;
}	
	
	/*Remover*/
._3FmxxjyWNHU1PrBGnBe6tm._2l416KfEtI4CL0mCUEmOBw {
    background-image: unset;
}	
/*Remove Scroll*/
._2l416KfEtI4CL0mCUEmOBw {
	scroll-width: none;
}
/*Remove Stupid Blur*/
._2OOzYVWIHaKXm6_7sscT9i .Jbe--NUNw7sxbxGsMSjVa {
    backdrop-filter: unset;
    background: unset;
}
/*Remove Banner Mirror Image*/
.HNbe3eZf6H7dtJ042x1vM._3_IUVzR9tpG_JKEjhwXEAb {
    display: none;
}
/*Remove Mini Info When You Scroll Down*/
._2L3s2nzh7yCnNESfI5_dN1.jnXtv79jL6SXXwlJYPtQz {
	display: none;
    opacity: 0;
}
._3DeO92O5aVkcdwEBCJDjWm._3fLo166MlaNqP8r8tTyRz {
	background: unset;
    margin-top: 6px;
}
/*Hide Scroll*/
._2l416KfEtI4CL0mCUEmOBw {
    scrollbar-width: none;
}

/*Lower Collection Tags*/
._2b6WkTnmJxMuX1biL7aS3C {
    position: fixed !important;
    top: 6px;
    right: 16px;
    max-height: 16px;
    align-content: center;
    justify-content: center;
} 

._2b6WkTnmJxMuX1biL7aS3C ._1HS4twEHtDJ_8MWgJT4VBd {
    font-size: 8px;
    background: color-mix(in srgb, var(--secondary-background) 65%, transparent) !important;
	border-radius: 4px;
	box-shadow: 0 0 12px #0000005c;
}

/*Fancy Gamepage Basic*/
._2OOzYVWIHaKXm6_7sscT9i>div {
    transition: 1s all ease;
    margin-top: -26px;
}
.A14yd24JRjhFI-Q1ae6tN {
    transition: 1s all ease;
}
._3Y87YQY56ZCOqhgcZFaDc5 {
    padding: 10px 20px 4px 20px;
}
div.NarrowRightPanel ._2zxzStp5qY5M1evOm8keES {
    height: unset;
}
._39RheXihcN6H2k2muQTjkI ._2zxzStp5qY5M1evOm8keES {
    height: 32px;
}

._31ptFGGMZrSQc5BCX1e5lm._3KfxIwlXEvum7FCD_AM2_t {
    border-image-source: unset !important;
    border-image-width: unset !important;
    border-image-repeat: unset !important;
    border-image-slice: unset !important;
    background: unset !important;
    box-shadow: unset !important;
}
._31ptFGGMZrSQc5BCX1e5lm._3KfxIwlXEvum7FCD_AM2_t {
    border-image-source: unset;
    border-image-width: 1px;
    border-image-repeat: stretch;
    border-image-slice: 7;
    background: unset;
    box-shadow: 0 0 12px #00000025;
}

._3-V8vjmrwuJM6Ws3tsjFJj ._25f0fX6qbgdB7O_lMrbhCN {
    padding: 4px 10px 2px 10px;
    flex-direction: row;
    vertical-align: middle;
    position: relative;
    left: 0;
    right: 0;
    margin-right: 0;
    margin-left: 0;
}
._7k4qmaN8SUMvv6u-L81uk {
    padding: 4px 20px 4px 20px;
    position: absolute;
	margin-left: -12px;
	margin-right: 20px;
    width: 150px;
}
div.NarrowRightPanel ._3-V8vjmrwuJM6Ws3tsjFJj ._7k4qmaN8SUMvv6u-L81uk {
    margin-left: -10px;
}
._7k4qmaN8SUMvv6u-L81uk:last-child {
    padding-right: unset;
}

.HNbe3eZf6H7dtJ042x1vM {
    width: calc(95% + 128px);
    height: 130%;
    max-width: 100%;
    -webkit-mask-image: unset;
    mask-image: unset;
}

._3-V8vjmrwuJM6Ws3tsjFJj .DgVQapkBmhAW6oPY5rPZo {
    position: sticky;
    display: block;
    font-size: 13px;
    width: 105%;
    left: 0;
    right: 0;
	margin-left: 38px;
}
._3-V8vjmrwuJM6Ws3tsjFJj ._25f0fX6qbgdB7O_lMrbhCN {
    padding: 4px 10px 2px 10px;
    flex-direction: row;
    vertical-align: middle;
    position: relative;
    left: 0;
    right: 0;
    margin-right: 0;
    margin-left: 0;
}
._3-V8vjmrwuJM6Ws3tsjFJj {
	margin-left: auto;
    margin-right: auto;
    background-color: color-mix(in srgb, var(--secondary-background) 75%, transparent) !important;
	border-radius: 8px;
	width: 72%;
}
html:has([class*="_39RheXihcN6H2k2muQTjkI"]):has([class*="_1YbtIWcfkQJOysLXQbwzRf"]):has([class*="zjtAIAWI6HE0oCtJzw6Qt"]) [class*="_3-V8vjmrwuJM6Ws3tsjFJj"],
html:has([class*="_39RheXihcN6H2k2muQTjkI"]):has([class*="_1YbtIWcfkQJOysLXQbwzRf"]):has([class*="zjtAIAWI6HE0oCtJzw6Qt"]) [class*="A14yd24JRjhFI-Q1ae6tN"] {
	opacity: 0 !important;
	transition: 1s all ease !important;
}
._3-V8vjmrwuJM6Ws3tsjFJj>div {
    background: #33383fbd !important;
    box-shadow: none !important;
}
._2r4TK4BAuU-J4FuF_O7v_5 ._3-V8vjmrwuJM6Ws3tsjFJj .Panel {
	background-color: #23262ec7;
}

div.NarrowRightPanel ._3-V8vjmrwuJM6Ws3tsjFJj {
    margin-top: -26px;
    width: 43%;
}

.z8GYwNt_nbBZrf7OVjs-s {
    position: fixed;
    top: -2px;
    left: 16px;
    padding: 12px;
    background: color-mix(in srgb, var(--secondary-background) 65%, transparent) !important;
	box-shadow: 0 0 12px #0000005c;
    border-radius: 8px;
    font-weight: bold;
    font-size: 12px;
    letter-spacing: 0.6px;
}
/* ... */

